Ajout de différents onglets

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
@@ -19,11 +19,37 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-  </head>
-  <body ng-app="testYeomanApp" data-spy="scroll" style="opacity: 1;" cz-shortcut-listen="true">
+</head>
+<body ng-app="testYeomanApp" data-spy="scroll" style="opacity: 1;" cz-shortcut-listen="true">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+      <![endif]-->
+
+    <header ng-controller="NavCtrl">
+      <div class="banner">
+        <div class="text-center">
+          <h1>AMonImage</h1>
+          <p>Des faire-part et invitations qui vous ressemblent</p>
+        </div>
+      </div>
+      <div id="navbar" class="navbar navbar-inverse relative" role="banner" data-offset-top="200" bs-affix>
+        <div class="container">
+          <div class="navbar-header">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <nav class="collapse navbar-collapse" role="navigation">
+            <ul id="menu" class="nav navbar-nav">
+                <li ng-cloak ng-repeat="menu in menus"><a ng-click="goTo(menu.link)">{{menu.titre | uppercase}}</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
@@ -50,10 +76,11 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/directives/bsHolder.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/directives/bsHolder.js"></script>
+    <script src="scripts/controllers/nav.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
