--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,10 @@
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
 
+  <div class="footer">
+    <p>&copy; Jean Detoeuf</p>
+  </div>
+
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -64,7 +68,6 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/flexslider/jquery.flexslider.js"></script>
     <script src="bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -78,6 +81,7 @@
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <script src="bower_components/flexslider/jquery.flexslider.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
