Adaptation dist Espacement paragraphes accueil

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="bower_components/sass-bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
-    <link rel="stylesheet" type="text/css" href="bower_components/flexslider/flexslider.css">
     <!-- endbuild -->
+    <link rel="stylesheet" type="text/css" href="bower_components/flexslider/flexslider.css">
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -29,7 +29,7 @@
     <header ng-controller="NavCtrl">
       <div class="banner">
         <div class="text-center">
-          <h1>AMonImage</h1>
+          <h1>A votre image</h1>
           <p>Des faire-part et invitations qui vous ressemblent</p>
         </div>
       </div>
