Ajout du bandeau

--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,9 @@
       <![endif]-->
 
     <header ng-controller="NavCtrl">
-      <div class="banner">
-        <div class="text-center">
-          <h1>A votre image</h1>
-          <p>Des faire-part et invitations qui vous ressemblent</p>
-        </div>
+      <div class="banner text-center">
+          <img src="images/bandeau.png"/>
+          <p>Des faire-parts et invitations qui vous ressemblent</p>
       </div>
       <div id="navbar" class="navbar navbar-inverse relative" role="banner" data-offset-top="200" bs-affix>
         <div class="container">
