Image bandeau responsive

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,13 @@
       <![endif]-->
 
     <header ng-controller="NavCtrl">
-      <div class="banner text-center">
-          <img src="images/bandeau.png"/>
-          <p>Des faire-parts et invitations qui vous ressemblent</p>
+      <div class="container texte">
+        <div class="row">
+          <div class="col-md-12 article banner">
+            <img class="img-responsive" src="images/bandeau.png"/>
+            <p class="text-center">Des faire-parts et invitations qui vous ressemblent</p>
+          </div>
+        </div>
       </div>
       <div id="navbar" class="navbar navbar-inverse relative" role="banner" data-offset-top="200" bs-affix>
         <div class="container">
