--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
-<body ng-app="testYeomanApp" data-spy="scroll" style="opacity: 1;" cz-shortcut-listen="true">
+<body ng-app="aVotreImage" data-spy="scroll" style="opacity: 1;" cz-shortcut-listen="true">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
@@ -92,7 +92,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/nav.js"></script>
-    <script src="scripts/controllers/portfolio.js"></script>
+    <script src="scripts/controllers/galerie.js"></script>
     <!-- endbuild -->
 </body>
 </html>
