--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/nav.js"></script>
     <script src="scripts/controllers/galerie.js"></script>
+    <script src="scripts/controllers/tarif.js"></script>
     <!-- endbuild -->
 </body>
 </html>
