Changement du bandeau

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,7 @@
       <div class="container texte">
         <div class="row">
           <div class="col-md-12 article banner">
-            <img class="img-responsive" src="images/bandeau.png"/>
-            <p class="text-center">Des faire-parts et invitations qui vous ressemblent</p>
+            <p>Elodie Detoeuf</p>
           </div>
         </div>
       </div>
