--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,14 @@
 
     <header ng-controller="NavCtrl">
       <div class="container texte">
-        <div class="row">
-          <div class="col-md-12 article banner">
+        <div class="row banner">
+          <div class="col-md-12 article">
             <p>Elodie Detoeuf</p>
+          </div>
+        </div>
+        <div class="row sous-titre">
+          <div class="col-md-12 text-center">
+            <p>Des faire-parts et invitations qui vous ressemblent</p>
           </div>
         </div>
       </div>
