Activation du menu par clic

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row sous-titre">
           <div class="col-md-12 text-center">
-            <p>Des faire-parts et invitations qui vous ressemblent</p>
+            <p>Des faire-parts et invitations qui vous <a ng-click="activate()">ressemblent</a></p>
           </div>
         </div>
       </div>
