--- a/app/index.html
+++ b/app/index.html
@@ -27,17 +27,8 @@
       <![endif]-->
 
     <header ng-controller="NavCtrl">
-      <div class="container texte">
-        <div class="row banner">
-          <div class="col-md-12 article">
-            <p>Elodie Detoeuf</p>
-          </div>
-        </div>
-        <div class="row sous-titre">
-          <div class="col-md-12 text-center">
-            <p>Des faire-parts et invitations qui vous ressemblent</p>
-          </div>
-        </div>
+      <div class="banner">
+        <img src="images/bandeau.png"/>
       </div>
       <div id="navbar" class="navbar navbar-inverse relative" role="navigation" data-offset-top="300" bs-affix>
         <div class="container">
