--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
         </div>
       </div>
     </header>
+    <ngp-piwik ngp-set-js-url="http://piwik.elodiedetoeuf.fr/piwik.js" ngp-set-tracker-url="http://piwik.elodiedetoeuf.fr/piwik.php" ngp-set-site-id="1"> </ngp-piwik>
 
     <!-- Add your site or application content here -->
     <div ng-view=""></div>
@@ -83,6 +84,7 @@
     <script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/angular-piwik/angular-piwik.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/flexslider/jquery.flexslider.js"></script>
