Réimportation des fonts

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <div class="banner">
         <img src="images/bandeau.png"/>
       </div>
-      <div id="navbar" class="navbar navbar-inverse relative" role="navigation" data-offset-top="300" bs-affix>
+      <div id="navbar" class="navbar navbar-inverse relative" role="navigation" data-offset-top="300" bs-affix ng-cloak>
         <div class="container">
           <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
