--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <div class="banner">
         <img src="images/bandeau.png"/>
       </div>
-      <div id="navbar" class="navbar navbar-inverse relative" role="navigation" data-offset-top="300" bs-affix ng-cloak>
+      <div id="navbar" class="navbar navbar-inverse relative" role="navigation" data-offset-top="300" bs-affix>
         <div class="container">
           <div class="navbar-header">
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
@@ -44,7 +44,7 @@
             <ul id="menu" class="nav navbar-nav">
               <li ng-repeat="menu in menus" ng-class="{active:menu.active,dropdown:menu.menus.length>0}">
                 <a ng-if="!menu.menus" ng-click="goTo(menu.href)" ng-bind="menu.text | uppercase"></a>
-                <a ng-if="menu.menus" href="#" class="dropdown-toggle" data-toggle="dropdown">{{menu.text | uppercase}} <b class="caret"></b></a>
+                <a ng-if="menu.menus" href="#" class="dropdown-toggle" data-toggle="dropdown"><span ng-bind="menu.text | uppercase"></span><b class="caret"></b></a>
                 <ul ng-if="menu.menus" class="dropdown-menu" role="menu">
                   <li ng-repeat="subMenu in menu.menus"><a ng-click="goTo(subMenu.href)">{{subMenu.text}}</a></li>
                 </ul>
