--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,6 @@
       <![endif]-->
 
     <header ng-controller="NavCtrl">
-      <div class="banner">
-        <img src="images/bandeau.png"/>
-      </div>
       <div id="navbar" class="navbar navbar-inverse relative" role="navigation" data-offset-top="300" bs-affix>
         <div class="container">
           <div class="navbar-header">
@@ -39,6 +36,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" href="#"><object width="150px" height="75px" data="images/signature.svg" type="image/svg+xml"></object></a>
           </div>
           <nav class="collapse navbar-collapse" role="navigation">
             <ul id="menu" class="nav navbar-nav">
