--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><object width="150px" height="75px" data="images/signature.svg" type="image/svg+xml"></object></a>
+            <a class="navbar-brand" href="#"><img src="images/signature.png"></img></a>
           </div>
           <nav class="collapse navbar-collapse" role="navigation">
             <ul id="menu" class="nav navbar-nav">
