--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,8 @@
           <nav class="collapse navbar-collapse" role="navigation">
             <ul id="menu" class="nav navbar-nav">
               <li ng-repeat="menu in menus" ng-class="{active:menu.active,dropdown:menu.menus.length>0}">
-                <a ng-if="!menu.menus" ng-click="goTo(menu.href)" ng-bind="menu.text | uppercase"></a>
-                <a ng-if="menu.menus" href="#" class="dropdown-toggle" data-toggle="dropdown"><span ng-bind="menu.text | uppercase"></span><b class="caret"></b></a>
+                <a ng-if="!menu.menus" ng-click="goTo(menu.href)" ng-bind="menu.text"></a>
+                <a ng-if="menu.menus" href="#" class="dropdown-toggle" data-toggle="dropdown"><span ng-bind="menu.text"></span><b class="caret"></b></a>
                 <ul ng-if="menu.menus" class="dropdown-menu" role="menu">
                   <li ng-repeat="subMenu in menu.menus"><a ng-click="goTo(subMenu.href)">{{subMenu.text}}</a></li>
                 </ul>
