--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="images/signature.png"></img></a>
+            <div id="logo"><div class="prenom">Elodie</div><div class="nom">Detoeuf</div></div>
           </div>
           <nav class="collapse navbar-collapse" role="navigation">
             <ul id="menu" class="nav navbar-nav">
