Copyright sans nom

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
     <div ng-view=""></div>
 
   <div class="footer">
-    <p>&copy; Jean Detoeuf</p>
+    <p>&copy; 2014</p>
   </div>
 
     <!--[if lt IE 9]>
