--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,9 @@
 <body ng-app="aVotreImage" data-spy="scroll" style="opacity: 1;" cz-shortcut-listen="true">
     <!--[if lt IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      </script type="text/javascript">
+        window.location.replace('http://browsehappy.com/');
+      </script>
       <![endif]-->
 
     <header ng-controller="NavCtrl">
