--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Elodie Detoeuf - faire-parts</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <meta name="fragment" content="!" />
@@ -68,6 +68,9 @@
           &copy; 2014
         </div>
         <div class="col-md-6 text-right">
+          <div style="margin-right:-30px">
+            <a style="width:87px" href="https://twitter.com/share" class="twitter-share-button" data-url="http://elodiedetoeuf.fr" data-via="thebignet" data-lang="fr">Tweeter</a><br/>
+          </div>
           <div class="fb-like" data-href="http://elodiedetoeuf.fr" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
         </div>
       </div>
@@ -109,6 +112,7 @@
     <!-- endbuild -->
     <div id="fb-root"></div>
     <script>
+      //Facebook
       window.fbAsyncInit = function() {
         FB.init({
           appId      : '612018645552681',
@@ -124,6 +128,9 @@
         js.src = "//connect.facebook.net/fr_FR/all.js#xfbml=1";
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
+
+      //Twitter
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
     </script>
 </body>
 </html>
