--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="6lY6y194e_6Igah8RLMfjOHB1wRKotHfj75AnfyAy-A"/>
     <title>Elodie Detoeuf - faire-parts</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
