--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="6lY6y194e_6Igah8RLMfjOHB1wRKotHfj75AnfyAy-A"/>
-    <title ng-bind="'Elodie Detoeuf - ' + $root.title">MyApp - Welcome</title>
+    <title ng-bind="'Elodie Detoeuf - ' + $root.title">Elodie Detoeuf</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <meta name="fragment" content="!" />
@@ -24,7 +24,7 @@
     <!-- endbuild -->
 </head>
 <body data-spy="scroll" style="opacity: 1;" cz-shortcut-listen="true">
-    <!--[if lt IE 9]>
+    <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <script type="text/javascript">
         window.location.replace('http://browsehappy.com/');
